Updated class load service classes to Java 11