@@ -30,8 +30,8 @@ public class EomClassLoadServiceImpl implements EomClassLoadService {
 	 * @see de.enflexit.common.classLoadService.BaseClassLoadService#newInstance(java.lang.String)
 	 */
 	@Override
-	public Object newInstance(String className) throws ClassNotFoundException, InstantiationException, IllegalAccessException {
-		return this.forName(className).newInstance();
+	public Object newInstance(String className) throws  ClassNotFoundException, InstantiationException, IllegalAccessException,InvocationTargetException, NoSuchMethodException, SecurityException, NoClassDefFoundError {
+		return this.forName(className).getDeclaredConstructor().newInstance();
 	}
 	
 	/* (non-Javadoc)
